# src/docs/swagger.json
@@ -1195,7 +1195,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"TI"
+						]
 					}
 				],
 				"parameters": [],
@@ -1209,7 +1211,9 @@
 						}
 					}
 				}
-			},
+			}
+		},
+		"/dispositivos/list-devices": {
 			"get": {
 				"operationId": "ListarDispositivos",
 				"responses": {
@@ -1243,7 +1247,13 @@
 				"tags": [
 					"Dispositivos"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"TI"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "query",
@@ -1290,7 +1300,7 @@
 				]
 			}
 		},
-		"/dispositivos/{id}": {
+		"/dispositivos/get-device/{id}": {
 			"get": {
 				"operationId": "ObterDispositivo",
 				"responses": {
@@ -1313,7 +1323,13 @@
 				"tags": [
 					"Dispositivos"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"TI"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -1325,7 +1341,9 @@
 						}
 					}
 				]
-			},
+			}
+		},
+		"/dispositivos/update-device/{id}": {
 			"put": {
 				"operationId": "AtualizarDispositivo",
 				"responses": {
@@ -1345,7 +1363,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"TI"
+						]
 					}
 				],
 				"parameters": [
@@ -1369,7 +1389,9 @@
 						}
 					}
 				}
-			},
+			}
+		},
+		"/dispositivos/delete-device/{id}": {
 			"delete": {
 				"operationId": "DeletarDispositivo",
 				"responses": {
@@ -1382,7 +1404,9 @@
 				],
 				"security": [
 					{
-						"jwt": []
+						"jwt": [
+							"TI"
+						]
 					}
 				],
 				"parameters": [
